--- a/src/components/admin/scene/scene_set.css
+++ b/src/components/admin/scene/scene_set.css
@@ -19,6 +19,7 @@
 .admin-content .drag-content {
   min-height: 300px;
   position: relative;
+  background-color: #F1F3F7;
 }
 .admin-content .drag-content .drag-l,
 .admin-content .drag-content .drag-c,
@@ -147,8 +148,8 @@
 }
 .admin-content .drag-content .drag-c .scaling-right {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 10px;
+  bottom: 10px;
   z-index: 999;
 }
 .admin-content .drag-content .drag-c .drag-container {
@@ -173,6 +174,7 @@
   margin-left: auto;
   margin-right: auto;
   border: 1px dashed #BCBCBC;
+  background-color: rgba(255, 255, 255, 0);
 }
 .admin-content .drag-content .drag-c .drag-container img {
   width: 1198px;
