--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -20,7 +20,7 @@
     .drag-content{
       min-height: 300px;
       position: relative;
-      // background-color: #F1F3F7;
+      background-color: #F1F3F7;
       .drag-l,.drag-c,.drag-r{
         position: absolute;
         bottom: 0;
@@ -113,8 +113,8 @@
         background-color: #F1F3F7;
         .scaling-right{
           position: absolute;
-          right: 0;
-          bottom: 0;
+          right: 10px;
+          bottom:10px;
           z-index: 999;
         }
         .drag-container{
@@ -140,7 +140,7 @@
             margin-left: auto;
             margin-right: auto;
             border: 1px dashed #BCBCBC;
-            // background-color: #F1F3F7;
+            background-color:rgba(255,255,255,0);
           }
           img{
             width: 1198px;
