--- a/src/components/web/model/css.less
+++ b/src/components/web/model/css.less
@@ -1,18 +1,9 @@
-.resourcecenter_sys_temp1-warp {
-  width: 100%;
-  background: #ffffff;
-  border: 1px solid #cedfd7;
-  background: url() no-repeat center;
-  background-size: 100% 100% !important;
-  box-shadow: 0px 3px 20px rgba(85, 85, 85, 0.16);
-  display: flex;
-  align-items: center;
-  height: 600px;
+.literature_project_sys_temp4-warp {
   .l-w-wid{
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-  } 
+  }
   .title{
     height: 44px;
     font-size: 26px;
@@ -24,118 +15,54 @@
   }
   .list {
     width: 100%;
+    display: flex;
+    justify-content: center;
     .l-box {
-      float: left;
-      width: 570px;
-      height: 330px;
-      margin-left:50px;
-      transition: all .3s;
       cursor: pointer;
-      &:first-child{
-        margin-left: 0;
-        .l-t{
-          border-top: 8px solid #789F55;
-          color: #789F55;
-        }
-        .btn{
-          background: #789F55 !important;
-          background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAPCAYAAADphp8SAAAAAXNSR0IArs4c6QAAAJpJREFUOE+l08ENwkAMRNE/FZAOoAMoIZRABbRGJ1BCOgglhBPHQZZQDgFHa/BtpfWTd1YWjWX7DozASdK0bFOjg+1o3gADcFxiFegA3DKsGYrJbadYCVrDylCK2b4A59bQk3tPvb91+yfEr0/rgCsQ4T+AvgzZ/kSkoQRlSMTSDK0hVShWYz9nIsV5rspEzpDqRDtg+rb5Ab0AL8FUOXKjPEgAAAAASUVORK5CYII=) !important;
-          background-position: center !important;
-          background-repeat: no-repeat !important;
-        }
-        .count-w{
-          background: linear-gradient(90deg, rgba(120,159,85,0.1) 0%, rgba(120,159,85,0) 100%) !important;
-          &::after{
-            background: #789F55 !important;
-          }
-          i{
-            color: #789F55 !important;
-          }
-        }
-      }
+      float: left;
+      width: 350px;
+      height: 330px;
+      margin-left:71px;
+      transition: all .3s;
+      border-bottom: 3px solid #fff;
       &:hover{
         margin-top: -5px;
+        border-bottom: 3px solid #ddd;
+        box-shadow: 0px 3px 20px rgba(85,85,85,0.16);
       }
-      .l-t{
-        height: 104px;
-        background: #FFFFFF;
-        box-shadow: 0px 3px 20px rgba(85,85,85,0.1600);
-        opacity: 1;
-        border-radius: 0px 0px 5px 5px;
-        margin-bottom: 6px;
-        border-top: 8px solid #F2B100;
-        color: #F2B100;
-        padding: 13px 28px;
+      &:first-child{
+        margin-left: 0;
+      }
+      .img-w {
+        height: 230px;
         position: relative;
-        .btn{
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+        .type {
           position: absolute;
-          right: 0;
-          top: 24px;
-          display: block;
-          width: 46px;
-          height: 40px;
-          background: #F2B100;
-          background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAPCAYAAADphp8SAAAAAXNSR0IArs4c6QAAAJpJREFUOE+l08ENwkAMRNE/FZAOoAMoIZRABbRGJ1BCOgglhBPHQZZQDgFHa/BtpfWTd1YWjWX7DozASdK0bFOjg+1o3gADcFxiFegA3DKsGYrJbadYCVrDylCK2b4A59bQk3tPvb91+yfEr0/rgCsQ4T+AvgzZ/kSkoQRlSMTSDK0hVShWYz9nIsV5rspEzpDqRDtg+rb5Ab0AL8FUOXKjPEgAAAAASUVORK5CYII=);
-          background-position: center;
-          background-repeat: no-repeat;
-          border-radius: 20px 0px 0px 20px;
-        }
-        .m{
-          font-size: 28px;
-          font-weight: 400;
-        }
-        .s{
-          font-size: 18px;
-          font-weight: 400;
-          padding-top: 3px;
+          left: 0;
+          bottom: 0;
+          height: 32px;
+          padding: 5px 15px;
+          font-size: 16px;
+          color: #fff;
+          background: #f2b100;
+          border-radius: 0px 20px 0px 0px;
         }
       }
-      .l-body{
-        height: 220px;
+      .txt-w {
+        height: 97px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+        font-weight: 400;
+        color: #333;
         background: #fff;
-        box-shadow: 0px 3px 20px rgba(85,85,85,0.1600);
-        border-radius: 5px;
-        padding: 20px 28px;
-        .des{
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 26px;
-          color: #666;
-        }
-        .count-w{
-          padding: 10px 0;
-          margin-top: 14px;
-          width: 514px;
-          background: linear-gradient(90deg, rgba(242, 177, 0, 0.1) 0%, rgba(242,177,0,0) 100%);
-          border-radius: 5px;
-          position: relative;
-          padding-left: 18px;
-          line-height: 26px;
-          &::after{
-            content: '';
-            width: 2px;
-            position: absolute;
-            top: 10px;
-            bottom: 10px;
-            background: #F2B100;
-            left: 0;
-          }
-          span{
-            font-size: 14px;
-            font-weight: 400;
-            color: #666;
-            display: inline-block;
-            width: 70px;
-          }
-          i{
-            display: inline-block;
-            width: 80px;
-            text-align: right;
-            font-size: 14px;
-            font-weight: bold;
-            color: #F2B100;
-          }
-        }
+        padding: 30px;
       }
     }
   }
