--- a/src/components/admin/scene/model/model.less
+++ b/src/components/admin/scene/model/model.less
@@ -66,7 +66,7 @@
       width: 20px;
       height: 20px;
       display: block;
-      margin: 10px auto;
+      margin: 5px auto;
       border-radius: 1px;
     }
 
@@ -84,7 +84,7 @@
   .step-three {
     height: auto;
     position: relative;
-
+    padding-bottom: 10px;
     &::after {
       content: '';
       display: block;
