--- a/src/components/admin/scene/scene_set.css
+++ b/src/components/admin/scene/scene_set.css
@@ -140,8 +140,8 @@
   padding: 0;
 }
 .admin-content .drag-content .drag-c {
-  left: 289px;
-  right: 289px;
+  left: 0;
+  right: 0;
   z-index: 1;
   background-color: #F1F3F7;
   /***************屏幕按钮板块 */
@@ -157,7 +157,7 @@
   min-width: 430px;
   height: 100%;
   overflow-y: auto;
-  background-color: #fff;
+  background-color: #f1f3f7;
   padding: 30px;
 }
 .admin-content .drag-content .drag-c .drag-container .scene-warp-bg {
