--- a/src/components/admin/scene/scene_set.less
+++ b/src/components/admin/scene/scene_set.less
@@ -107,8 +107,10 @@
         }
       }
       .drag-c{
-        left: 289px;
-        right: 289px;
+        left: 0;
+        right: 0;
+        // left: 289px;
+        // right: 289px;
         z-index: 1;
         background-color: #F1F3F7;
         .scaling-right{
@@ -122,7 +124,8 @@
           min-width: 430px;//30%
           height:100%;
           overflow-y: auto;
-          background-color:#fff;
+          background-color:#f1f3f7;
+          // background-color:#fff;
           padding: 30px;
           .scene-warp-bg{
             // background-size: 100% 100% !important;
