--- a/src/views/admin/preview/css/publicGlobal.less
+++ b/src/views/admin/preview/css/publicGlobal.less
@@ -17,6 +17,8 @@
       color: #fff;
     }
     .img-warp-bg {
+      width: 100%;
+      height: 100%;
       z-index: 2;
     }
     .video-warp-bg {
@@ -50,3 +52,14 @@
       }
     }
   }
+  /***主要针对模板背景****/
+.dlib3-bgcomponent-w{
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
