--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -158,6 +158,7 @@
             // background-size: 100% 100% !important;
             background-position: top !important;
             background-repeat: no-repeat !important;
+            position: relative;
           }
           .drag-warp-bg{
             // min-height: 100%;
